--- a/views/campgrounds/campground.ejs
+++ b/views/campgrounds/campground.ejs
@@ -5,8 +5,8 @@
 <div class = "container">
     <header class = "jumbotron">
         <div class="container">
-            <h1>This is All My camp!</h1>
-            <a href="/createcamp" class="btn btn-lg btn-primary">add a new Camp Here!</a>
+            <h1>Scenary Collection</h1>
+            <a href="/createcamp" class="btn btn-lg btn-primary">add a new scenary!</a>
         </div>
        
     </header>
