--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -2,7 +2,7 @@
 <% include ../partials/header.ejs %>
 <div class="container">
     <div class="row">
-        <h1 class="text-center">Edit your Comment to : <%= campground.name %> Here!</h1>
+        <h1 class="text-center">Edit your Campground : <%= campground.name %> </h1>
         <div style="width: 30%; margin: 25px auto;">
             <form action = "/campground/<%= campground._id %>?_method=PUT" method="POST">
                 <div class="form-group">
