--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>YelpCamp</title>
+        <title>Scenary Collecion</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
         <link rel="stylesheet" href="/stylesheets/landing.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" type="text/javascript" async></script>
@@ -22,8 +22,8 @@
     </div>
 
     <div id="landing-header">
-        <h1>Welcome to YelpCamp!</h1>
-        <a href="/campground" class="btn btn-lg btn-success">View All Campgrounds</a>
+        <h1>Welcome to Scenary Collection!</h1>
+        <a href="/campground" class="btn btn-lg btn-success">View All Collections</a>
     </div>
 
     <ul class="slideshow">
