--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,29 +1,102 @@
 <html>
     <head>
-        <title>Yelp Camp</title>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-        <link rel="stylesheet" href="/stylesheets/main.css"
+        <title>MyCollection</title>
+        
+       
+       
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+        <link rel="stylesheet" href="/stylesheets/main.css">
+         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
     </head>
     <body>
+        
+        
+        
         <nav class="navbar navbar-default">
             <div class="container-fluid">
-                <a href="/" class="navbar-brand">YelpCamp</a>
+                <a href="/" class="navbar-brand">MyCollection</a>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
                         <% if(!currentUser){ %>
-                        <li><a href="/login">Login</a></li>
-                        <li><a href="/register">Sign up</a></li>
+                        <li><a data-toggle="modal" href="#myModal" ><span class="glyphicon glyphicon-log-in" aria-hidden="true"></span> Login</a></li>
+                        <li><a data-toggle="modal" href="#register" ><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Sign up</a></li>
                         <% } else { %>
-                        <li><a href="#"> <%= currentUser.username %></a></li>
-                        <li><a href="/logout">Logout</a></li>
+                        <li><a href="#"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> <%= currentUser.username %></a></li>
+                        <li><a href="/logout"><span class="glyphicon glyphicon-log-out" aria-hidden="true"></span> Logout</a></li>
                         <% } %>
                     </ul>
                 </div>
              </div>
+             
+             
+             
         </nav>
         <% if(success && success.length > 0) {%>
-        <div class="alert alert-success" role="alert"><%= success %></div>
+        <div class="alert alert-success" role="alert"><%= success %> ^_^</div>
         <% } %> 
         <% if(error && error.length > 0) {%>
-        <div class="alert alert-danger" role="alert"><%= error %></div>
+        <div class="alert alert-danger" role="alert"><%= error %> @_@</div>
         <% } %> 
+        
+        
+        <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                        <h4 class="modal-title" id="myModalLabel">Welcome</h4>
+                    </div>
+                    <div class="modal-body">
+                        <div class="login-triangle" style="width: 50%; margin: 25px auto;">
+                            <form class="login-container" action="/login" method="POST">
+                                <div class="form-group">
+                                     <label for="username">Username</label>
+                                    <input name="username" type="text" placeholder="username" style="width: 100%">
+                                </div>
+                                <div class="form-group">
+                                    <label for="Password">Password</label>
+                                    <input name="password" type="password" placeholder="password" style="width: 100%">
+                                </div>
+                                <div class="form-group">
+                                    <button class="btn btn-primary btn-block">Login</button>
+                                </div>
+                            </form>
+                            <button type="button" class="btn btn-block btn-default" data-dismiss="modal">Close</button>
+                        </div>
+                    </div>
+                    <div class="modal-footer"></div>
+                </div>
+            </div>
+        </div>
+        
+        <div class="modal fade" id="register" tabindex="-1" role="dialog" aria-labelledby="register-head" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                        <h4 class="modal-title" id="register-head">Welcome to join us</h4>
+                    </div>
+                    <div class="modal-body">
+                        <div class="login-triangle" style="width: 50%; margin: 25px auto;">
+                            <form class="login-container" action="/register" method="POST">
+                                <div class="form-group">
+                                     <label for="username">Username</label>
+                                    <input name="username" type="text" placeholder="username" style="width: 100%">
+                                </div>
+                                <div class="form-group">
+                                    <label for="Password">Password</label>
+                                    <input name="password" type="password" placeholder="password" style="width: 100%">
+                                </div>
+                                <div class="form-group">
+                                    <button class="btn btn-primary btn-block">Sign Up</button>
+                                </div>
+                            </form>
+                            <button type="button" class="btn btn-block btn-default" data-dismiss="modal">Close</button>
+                        </div>
+                    </div>
+                    <div class="modal-footer"></div>
+                </div>
+            </div>
+        </div>
