--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -13,3 +13,15 @@
 #delete-form {
     display: inline;
 }
+
+.row {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display:         flex;
+  flex-wrap: wrap;
+}
+.row > [class*='col-'] {
+  display: flex;
+  flex-direction: column;
+}
