--- a/views/campgrounds/camp.ejs
+++ b/views/campgrounds/camp.ejs
@@ -53,7 +53,7 @@
                      <div class="row">
                          <div class="col-md-12">
                              <strong> <%= comment.author.username %>: </strong>
-                             <span class="pull-right"> <%= comment.date %></span>
+                             <h5 class="pull-right" style="float:right;"> <%= comment.date %></h5>
                              <p> <%= comment.content %></p>
                             <% if(currentUser && comment.author.id.equals(currentUser._id)){ %> 
                                 <button class="btn btn-warning btn-xs" data-toggle="modal" onClick="getComment('<%=comment._id%>', '<%=comment.content%>')">
