--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -14,14 +14,14 @@
     display: inline;
 }
 
-.row {
+#board {
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display:         flex;
   flex-wrap: wrap;
 }
-.row > [class*='col-'] {
+#board > [class*='col-'] {
   display: flex;
   flex-direction: column;
 }
