--- a/views/campgrounds/campground.ejs
+++ b/views/campgrounds/campground.ejs
@@ -10,7 +10,7 @@
         </div>
        
     </header>
-    <div class="row text-center">
+    <div id = "board" class="row text-center">
         <% campground.forEach(function(camp){ %>
             <div class="col-md-3 col-sm-6 ">
                 <div class="thumbnail inner">
